Add missing color to CSS variables

--- a/assets/scss/variables/_colors.scss
+++ b/assets/scss/variables/_colors.scss
@@ -55,6 +55,7 @@ $colors: (
     'purple': $purple,
     'deep-purple': $deep-purple,
     'indigo': $indigo,
+    'blue': $blue,
     'light-blue': $light-blue,
     'cyan': $cyan,
     'teal': $teal,
