Add big and small buttons variations

--- a/assets/scss/contet/_buttons.scss
+++ b/assets/scss/contet/_buttons.scss
@@ -26,4 +26,14 @@
     &.button--icon {
         @include button-icon;
     }
+
+    // Button big
+    &.button--big {
+        @include button-big;
+    }
+
+    // Button small
+    &.button--small {
+        @include button-small;
+    }
 }
