--- a/assets/scss/variables/_buttons.scss
+++ b/assets/scss/variables/_buttons.scss
@@ -13,5 +13,21 @@ $button-line-height: $base-line-height !default;
 $button-text-transform: null !default;
 $button-disabled-opacity: 0.5 !default;
 
-$button-icon-size: calc(($button-padding-y * 2) + (1rem * $button-line-height) + ($button-border-width * 2)) !default;
+$button-icon-size: calc(
+    ($button-padding-y * 2) + ($button-font-size * $button-line-height) + ($button-border-width * 2)
+) !default;
 $button-icon-margin: div($button-padding-x, 3) !default;
+
+$button-big-padding-y: 0.5rem !default;
+$button-big-padding-x: $button-big-padding-y * 2 !default;
+$button-big-font-size: $base-font-size * 1.25 !default;
+$button-big-icon-size: calc(
+    ($button-big-padding-y * 2) + ($button-big-font-size * $button-line-height) + ($button-border-width * 2)
+) !default;
+
+$button-small-padding-y: 0.25rem !default;
+$button-small-padding-x: $button-small-padding-y * 2 !default;
+$button-small-font-size: $base-font-size * 0.875 !default;
+$button-small-icon-size: calc(
+    ($button-small-padding-y * 2) + ($button-small-font-size * $button-line-height) + ($button-border-width * 2)
+) !default;
