Rename folder 'contet' to 'content'

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -13,6 +13,6 @@
 @import 'fonts/fonts';
 @import 'layout/layout';
 @import 'typography/typography';
-@import 'contet/content';
+@import 'content/content';
 @import 'utilities/utilities';
 @import 'components/components';
