General linting and formatting

--- a/assets/scss/reset/_forms.scss
+++ b/assets/scss/reset/_forms.scss
@@ -153,7 +153,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-    -webkit-appearance: button; // 1
+    appearance: button; // 1
 }
 
 // Remove the inner border and padding in Firefox
@@ -186,20 +186,20 @@ button:-moz-focusring,
 // 2. Correct the outline style in Safari
 
 [type='search'] {
-    -webkit-appearance: textfield; // 1
+    appearance: textfield; // 1
     outline-offset: -2px; // 2
 }
 
 // Remove the inner padding in Chrome and Safari on macOS
 
 [type='search']::-webkit-search-decoration {
-    -webkit-appearance: none;
+    appearance: none;
 }
 
 // 1. Correct the inability to style clickable types in iOS and Safari
 // 2. Change font properties to `inherit` in Safari
 
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; // 1
+    appearance: button; // 1
     font: inherit; // 2
 }
