--- a/assets/scss/reset/_document.scss
+++ b/assets/scss/reset/_document.scss
@@ -34,6 +34,6 @@ body {
     font-weight: $base-font-weight;
     line-height: $base-line-height; // 3
     text-align: left;
-    -webkit-text-size-adjust: 100%; // 4
+    text-size-adjust: 100%; // 4
     -webkit-tap-highlight-color: rgba($black, 0); // 5
 }
