--- a/assets/scss/layout/footer/_social.scss
+++ b/assets/scss/layout/footer/_social.scss
@@ -16,7 +16,7 @@ $footer-social-font-size: 1.5rem !default;
         margin-bottom: $footer-social-margin-bottom-md;
     }
 
-    .social {
+    .button {
         font-size: $footer-social-font-size;
     }
 }
