Fix card image size if it is a link

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -30,7 +30,7 @@ $card-body-padding: 1.25rem !default;
 
 .card__image {
     &[href] {
-        display: inline-block;
+        display: block;
     }
 
     img {
