Change display font size to responsive font size

--- a/assets/scss/base/typography/_display.scss
+++ b/assets/scss/base/typography/_display.scss
@@ -13,10 +13,6 @@
 @each $display, $value in $display-font-sizes {
     .#{$display} {
         @extend %display;
-        font-size: $value;
-
-        @include mb-down(md) {
-            font-size: div($value, 1.5);
-        }
+        @include rfs($value);
     }
 }
