Add '$footer-color' variable

--- a/assets/scss/layout/footer/_footer.scss
+++ b/assets/scss/layout/footer/_footer.scss
@@ -3,8 +3,9 @@
 // =====================================================
 
 $footer-background-color: $gray-200 !default;
+$footer-color: $base-color !default;
 
-$footer-link-color: $base-color !default;
+$footer-link-color: $footer-color !default;
 $footer-link-text-decoration: none !default;
 $footer-link-hover-color: $link-hover-color !default;
 
@@ -12,6 +13,7 @@ $footer-bottom-border-top: 2px solid $gray-300 !default;
 
 .footer {
     background-color: $footer-background-color;
+    color: $footer-color;
 
     a {
         color: $footer-link-color;
