Fix 'mb-between' mixin

--- a/assets/scss/abstracts/mixins/_media-queries.scss
+++ b/assets/scss/abstracts/mixins/_media-queries.scss
@@ -26,7 +26,7 @@
 
 @mixin mb-between($lower-break, $upper-break) {
     $min: find-break($lower-break);
-    $max: (find-break($break) - $break-offset);
+    $max: (find-break($upper-break) - $break-offset);
 
     @media (min-width: $min) and (max-width: $max) {
         @content;
