--- a/assets/scss/base/reset/_embedded-content.scss
+++ b/assets/scss/base/reset/_embedded-content.scss
@@ -6,15 +6,15 @@
 figure {
     @include last-child-no-margin;
     margin: 0;
-
-    img {
-        margin-bottom: div($base-margin, 2);
-    }
 }
 
 figcaption {
     color: $figcaption-color;
     font-size: $figcaption-font-size;
+
+    img + & {
+        margin-top: div($base-margin, 2);
+    }
 }
 
 // Images and content
