Add variables for 'label' and 'legend' tag

--- a/assets/scss/abstracts/variables/_forms.scss
+++ b/assets/scss/abstracts/variables/_forms.scss
@@ -2,6 +2,10 @@
 // Forms
 // =====================================================
 
+// Label
+$label-margin-bottom: div($base-margin, 2) !default;
+
+// Input
 $input-margin-bottom: $base-margin !default;
 $input-padding-y: $button-padding-y !default;
 $input-padding-x: $button-padding-x !default;
@@ -14,6 +18,7 @@ $input-focus-border-color: $primary !default;
 $input-disabled-background-color: $gray-300 !default;
 $input-disabled-opacity: $button-disabled-opacity !default;
 
+// Checkbox
 $checkbox-width: 1rem !default;
 $checkbox-height: $checkbox-width !default;
 $checkbox-checked-background-color: $input-focus-border-color !default;
@@ -22,6 +27,7 @@ $checkbox-checked-background-image: svg-encode(
     '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path fill="none" stroke="#{$checkbox-checked-color}" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M6 10l3 3l6-6"/></svg>'
 ) !default;
 
+// Radio
 $radio-width: $checkbox-width !default;
 $radio-height: $checkbox-height !default;
 $radio-checked-background-color: $checkbox-checked-background-color !default;
@@ -30,12 +36,18 @@ $radio-checked-background-image: svg-encode(
     '<svg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -4 8 8"><circle r="2" fill="#{$radio-checked-color}"/></svg>'
 ) !default;
 
+// Select
 $select-padding-right: 2.25rem !default;
 $select-background-image: svg-encode(
     '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill="none" stroke="#{$input-color}" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2 5l6 6 6-6"/></svg>'
 ) !default;
 $select-background-size: 1rem 0.75rem !default;
 
+// Textarea
 $textarea-min-width: calc(
     $base-line-height * ($base-font-size * 3) + $input-padding-y * 2 + $input-border-width * 2
 ) !default;
+
+// Legend
+$legend-margin-bottom: div($base-margin, 2) !default;
+$legend-font-size: 1.25rem !default;
