--- a/assets/scss/abstracts/functions/_color-contrast.scss
+++ b/assets/scss/abstracts/functions/_color-contrast.scss
@@ -2,29 +2,29 @@
 // Color contrast
 // =====================================================
 
-@function color-contrast($background, $color-contrast-dark: $dark, $color-contrast-light: $light) {
-    $foregrounds: $color-contrast-light, $color-contrast-dark, $white, $black;
+@function color-contrast($background-color, $color-contrast-dark: $dark, $color-contrast-light: $light) {
+    $foreground-colors: $color-contrast-light, $color-contrast-dark, $white, $black;
     $min-contrast-ratio: 4.5;
     $max-ratio: 0;
     $max-ratio-color: null;
 
-    @each $foreground in $foregrounds {
-        $contrast-ratio: contrast-ratio($background, $foreground);
+    @each $color in $foreground-colors {
+        $contrast-ratio: contrast-ratio($background-color, $color);
 
         @if $contrast-ratio > $min-contrast-ratio {
-            @return $foreground;
+            @return $color;
         } @else if $contrast-ratio > $max-ratio {
             $max-ratio: $contrast-ratio;
-            $max-ratio-color: $foreground;
+            $max-ratio-color: $color;
         }
     }
 
     @return $max-ratio-color;
 }
 
-@function contrast-ratio($background, $foreground) {
-    $lum1: luminance($background);
-    $lum2: luminance($foreground);
+@function contrast-ratio($background-color, $foreground-color) {
+    $lum1: luminance($background-color);
+    $lum2: luminance($foreground-color);
 
     @return if($lum1 > $lum2, div($lum1 + 0.05, $lum2 + 0.05), div($lum2 + 0.05, $lum1 + 0.05));
 }
