--- a/assets/scss/layout/header/_hamburger.scss
+++ b/assets/scss/layout/header/_hamburger.scss
@@ -2,8 +2,6 @@
 // Hamburger
 // =====================================================
 
-$header-height: $scroll-padding-top !default;
-
 $header-hamburger-layer-width: 1.375rem !default;
 $header-hamburger-layer-height: 3.5px !default;
 $header-hamburger-layer-spacing: 3.5px !default;
@@ -86,32 +84,41 @@ $header-hamburger-layer-border-radius: $base-border-radius !default;
 
 // Hamburger animations
 // =====================================================
-$default-transition-timing: cubic-bezier(0.55, 0.055, 0.675, 0.19) !default;
-$default-active-transition-timing: cubic-bezier(0.215, 0.61, 0.355, 1) !default;
+$base-transition-timing: cubic-bezier(0.55, 0.055, 0.675, 0.19) !default;
+$base-active-transition-timing: cubic-bezier(0.215, 0.61, 0.355, 1) !default;
+
+$spin-transition-timing: $base-transition-timing !default;
+$spin-active-transition-timing: $base-active-transition-timing !default;
 
 $vortex-transition-timing: cubic-bezier(0.19, 1, 0.22, 1) !default;
+$vortex-active-transition-timing: $vortex-transition-timing !default;
 
-$collapse-transition-timing: cubic-bezier(0.33333, 0.66667, 0.66667, 1) !default;
-$collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !default;
+$collapse-transition-timing-1: $base-transition-timing !default;
+$collapse-transition-timing-2: cubic-bezier(0.33333, 0.66667, 0.66667, 1) !default;
+$collapse-active-transition-timing-1: $base-active-transition-timing !default;
+$collapse-active-transition-timing-2: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !default;
+
+$squeeze-transition-timing: $base-transition-timing !default;
+$squeeze-active-transition-timing: $base-active-transition-timing !default;
 
 // Spin
 .hamburger--spin {
     .hamburger__inner {
         transition-duration: 0.22s;
-        transition-timing-function: $default-transition-timing;
+        transition-timing-function: $spin-transition-timing;
 
         &::before {
             transition: top 0.1s 0.25s ease-in, opacity 0.1s ease-in;
         }
 
         &::after {
-            transition: bottom 0.1s 0.25s ease-in, transform 0.22s $default-transition-timing;
+            transition: bottom 0.1s 0.25s ease-in, transform 0.22s $spin-transition-timing;
         }
 
         .nav-open & {
             transform: rotate(225deg);
             transition-delay: 0.12s;
-            transition-timing-function: $default-active-transition-timing;
+            transition-timing-function: $spin-active-transition-timing;
 
             &::before {
                 top: 0;
@@ -122,7 +129,7 @@ $collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !
             &::after {
                 bottom: 0;
                 transform: rotate(-90deg);
-                transition: bottom 0.1s ease-out, transform 0.22s 0.12s $default-active-transition-timing;
+                transition: bottom 0.1s ease-out, transform 0.22s 0.12s $spin-active-transition-timing;
             }
         }
     }
@@ -151,7 +158,7 @@ $collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !
 
         .nav-open & {
             transform: rotate(765deg);
-            transition-timing-function: $vortex-transition-timing;
+            transition-timing-function: $vortex-active-transition-timing;
 
             &::before,
             &::after {
@@ -178,34 +185,34 @@ $collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !
         bottom: 0;
         transition-duration: 0.13s;
         transition-delay: 0.13s;
-        transition-timing-function: $default-transition-timing;
+        transition-timing-function: $collapse-transition-timing-1;
 
         &::after {
             top: ($header-hamburger-layer-spacing * 2 + $header-hamburger-layer-height * 2) * -1;
-            transition: top 0.2s 0.2s $collapse-transition-timing, opacity 0.1s linear;
+            transition: top 0.2s 0.2s $collapse-transition-timing-2, opacity 0.1s linear;
         }
 
         &::before {
-            transition: top 0.12s 0.2s $collapse-transition-timing, transform 0.13s $default-transition-timing;
+            transition: top 0.12s 0.2s $collapse-transition-timing-2, transform 0.13s $collapse-transition-timing-1;
         }
 
         .nav-open & {
             transform: translate3d(0, ($header-hamburger-layer-spacing + $header-hamburger-layer-height) * -1, 0)
                 rotate(-45deg);
             transition-delay: 0.22s;
-            transition-timing-function: $default-active-transition-timing;
+            transition-timing-function: $collapse-active-transition-timing-1;
 
             &::after {
                 top: 0;
                 opacity: 0;
-                transition: top 0.2s $collapse-active-transition-timing, opacity 0.1s 0.22s linear;
+                transition: top 0.2s $collapse-active-transition-timing-2, opacity 0.1s 0.22s linear;
             }
 
             &::before {
                 top: 0;
                 transform: rotate(-90deg);
-                transition: top 0.1s 0.16s $collapse-active-transition-timing,
-                    transform 0.13s 0.25s $default-active-transition-timing;
+                transition: top 0.1s 0.16s $collapse-active-transition-timing-2,
+                    transform 0.13s 0.25s $collapse-active-transition-timing-1;
             }
         }
     }
@@ -215,20 +222,20 @@ $collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !
 .hamburger--squeeze {
     .hamburger__inner {
         transition-duration: 0.075s;
-        transition-timing-function: $default-transition-timing;
+        transition-timing-function: $squeeze-transition-timing;
 
         &::before {
             transition: top 0.075s 0.12s ease, opacity 0.075s ease;
         }
 
         &::after {
-            transition: bottom 0.075s 0.12s ease, transform 0.075s $default-transition-timing;
+            transition: bottom 0.075s 0.12s ease, transform 0.075s $squeeze-transition-timing;
         }
 
         .nav-open & {
             transform: rotate(45deg);
             transition-delay: 0.12s;
-            transition-timing-function: $default-active-transition-timing;
+            transition-timing-function: $squeeze-active-transition-timing;
 
             &::before {
                 top: 0;
@@ -239,7 +246,7 @@ $collapse-active-transition-timing: cubic-bezier(0.33333, 0, 0.66667, 0.33333) !
             &::after {
                 bottom: 0;
                 transform: rotate(-90deg);
-                transition: bottom 0.075s ease, transform 0.075s 0.12s $default-active-transition-timing;
+                transition: bottom 0.075s ease, transform 0.075s 0.12s $squeeze-active-transition-timing;
             }
         }
     }
